[package]
name = "mp-game-test-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mp-game-test-common = { path = "../common" }
macroquad = "0.4.13"
serde = "1.0.217"
serde_json = "1.0.138"
log = "0.4.25"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter"] }
#tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
clap = { version = "4.5.30", features = ["derive"] }
rand_chacha = "0.9.0"