[package]
name = "mp-game-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter"] }
mp-game-test-common = { path = "../common" }
